# SSH_Orchestrator

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  README_FLOW.md  README_RELEASE.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.agents/agents/quality/: SKILL.md
.antigravity/: antigravity.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
.opencode/skills/criar-release/: SKILL.md
.pi/audit/: 2026-04-13-qa-repositorio-completo.md  2026-04-13-quality-repositorio-completo.md
.pi/plans/: feat-rtk-extension.md
docs/: README.md  api.md  architecture.md  components.md  create_release.md  models.md  state.md  tabnews-post.md
docs/adr/: 0001-tauri-v2-framework-desktop.md  0002-aes256gcm-pbkdf2-vault.md  0003-crdt-lww-hlc-sync.md  0004-github-sync-backend.md
docs/stories/: story-0.1.md
freerdp-3.26.0/: CMakeLists.txt  ChangeLog
freerdp-3.26.0/channels/cliprdr/client/: cliprdr_main.c
freerdp-3.26.0/channels/disp/server/: disp_main.c
freerdp-3.26.0/channels/encomsp/client/: encomsp_main.c
freerdp-3.26.0/channels/encomsp/server/: encomsp_main.c
freerdp-3.26.0/channels/gfxredir/server/: gfxredir_main.c
freerdp-3.26.0/channels/location/client/: location_main.c
freerdp-3.26.0/channels/location/server/: location_main.c
freerdp-3.26.0/channels/rail/: rail_common.h
freerdp-3.26.0/channels/rdpdr/client/: irp.c
freerdp-3.26.0/channels/rdpear/common/: ndr.c
freerdp-3.26.0/channels/rdpecam/server/: camera_device_enumerator_main.c  camera_device_main.c
freerdp-3.26.0/channels/rdpemsc/server/: mouse_cursor_main.c
freerdp-3.26.0/channels/rdpsnd/server/: rdpsnd_main.c
freerdp-3.26.0/channels/tsmf/client/: tsmf_codec.c  tsmf_ifman.c
freerdp-3.26.0/channels/urbdrc/common/: urbdrc_helpers.c
freerdp-3.26.0/ci/cmake-preloads/: config-oss-fuzz.cmake
freerdp-3.26.0/client/Android/Studio/freeRDPCore/: build.gradle
freerdp-3.26.0/client/Android/Studio/freeRDPCore/src/main/cpp/: CMakeLists.txt
freerdp-3.26.0/client/Android/Studio/freeRDPCore/src/main/res/layout/: activity_about.xml  session.xml
freerdp-3.26.0/client/Android/cmake/: AndroidHelpers.cmake  CopySharedLibs.cmake  ExternalCJSON.cmake  ExternalFFmpeg.cmake  ExternalFreeRDP.cmake  ExternalJpeg.cmake  ExternalLibPNG.cmake  ExternalOpenH264.cmake  ExternalOpenSSL.cmake  ExternalOpus.cmake  ExternalUriparser.cmake  ExternalWebP.cmake
freerdp-3.26.0/client/SDL/SDL3/: sdl_context.cpp  sdl_context.hpp  sdl_pointer.cpp
freerdp-3.26.0/client/SDL/SDL3/dialogs/: sdl_select.hpp
freerdp-3.26.0/client/X11/: xf_video.h
freerdp-3.26.0/client/common/: cmdline.c
freerdp-3.26.0/cmake/: ConfigOptions.cmake  GetProjectVersion.cmake
freerdp-3.26.0/libfreerdp/codec/: planar.c
freerdp-3.26.0/libfreerdp/core/: nego.c  peer.c
freerdp-3.26.0/server/proxy/modules/bitmap-filter/: bitmap-filter.cpp
freerdp-3.26.0/winpr/libwinpr/crypto/test/: TestCryptoCipher.c
freerdp-3.26.0/winpr/libwinpr/sspi/: sspi_winpr.c
freerdp-3.26.0/winpr/libwinpr/sspi/NTLM/: ntlm.c  ntlm_av_pairs.c  ntlm_compute.c  ntlm_message.c
freerdp-3.26.0/winpr/libwinpr/utils/: ntlm.c  sam.c
rdp-bridge/: Cargo.toml
rdp-bridge-c/: CMakeLists.txt
rdp-bridge-c/src/: clipboard.c  clipboard.h  display.c  display.h  main.c  protocol.c  protocol.h  session.c  session.h
rdp-bridge/src/: main.rs  protocol.rs  session.rs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: github.rs
src-tauri/src/handlers/: auth.rs  mod.rs  pty.rs  rdp.rs  server.rs  settings.rs  sftp.rs  ssh.rs  vault.rs  workspace.rs
src-tauri/src/models/: mod.rs  vault.rs
src-tauri/src/services/: crypto.rs  db.rs  mod.rs  pty.rs  rdp.rs  sftp.rs  ssh.rs
src-tauri/src/sync/: crdt.rs  git_ops.rs  merge.rs  mod.rs  repo.rs
src/components/: Modal.tsx  Sidebar.tsx  TitleBar.tsx  Toast.tsx  VaultGuard.tsx
src/components/Rdp/: RdpViewer.tsx
src/components/Servers/: AddServerModal.tsx  AuthMethodSelector.tsx  ConnectionTestButton.tsx  CredentialFields.tsx  EditServerModal.tsx  ProtocolSelector.tsx  SecurityOptions.tsx  rdpPrefs.ts  types.ts  useServerForm.ts
src/components/Settings/: KeybindingsSection.tsx
src/components/Sftp/: SftpDualPane.tsx  SftpPanel.tsx  TransferQueue.tsx
src/components/Terminal/: LocalTerminal.tsx  ServerPickerModal.tsx  Terminal.tsx  TerminalTabBar.tsx  TerminalWorkspace.tsx
src/components/Workspaces/: WorkspaceDetail.tsx
src/components/sync/: SyncStatus.tsx
src/hooks/: useAuth.ts  useKeybindings.ts  useSftpQueue.ts  useTerminalManager.ts  useTerminalTheme.ts  useToast.tsx
src/lib/: keybindings.ts  themes.ts
src/lib/api/: auth.ts  pty.ts  rdp.ts  servers.ts  settings.ts  sftp.ts  ssh.ts  vault.ts  workspaces.ts
(+26 files in other folders)
